# ompg-public

./: .gitignore  CMakeLists.txt  README.md  build.h  cal_energy.cpp  cal_energy.h  collision_frontend.h  dirent_xplat.h  energy_stats.cpp  energy_stats_writer.h  frag_lib_manager.cpp  grow_one_util.cpp  membrane.cpp  membrane.h  params.cpp  params.h  pdb_reader.cpp  pdb_reader.h  potential.h  readme.mdisgro.txt  readme.pretzel.md  residue.h  sample_states.cpp  sample_states.h  smc.cpp  structure.h  util.cpp  vdw_utils.cpp  vdw_utils.h  vla.h
config/: ConfigFile.h
data/: BBT_phi_psi_pair_NEW.txt  LOODIS_ed4_8_V3.txt  LoopGeo_37_pdf_21.txt  atomProp2.txt  frag.C.CA_pdf_32_19.txt  frag.N.C_pdf_32_19.txt  parameter.txt  parameter.txt_12length_1UTK_51_62  parameter.txt_1UTK_36  readme.txt
loop_closure_c/: sturm.h  tripep_closure.h
ompg/loop_regions/: loops_1_2_3_5_6_7.txt  sim_wt_2iwv.frag.ini  sim_wt_2iww.frag.ini
scripts/: NAMD_capture.py  NAMD_minimize.py  batch_render_occluded_barrels.py  cat_NAMD_energy.py  cluster_id_resampler.py  cmake_build.sh  cmake_init.sh  coor_to_castp_pdb.py  copy_top_k.py  munge_NAMD_interactions.py  pdb_ls_resampler.py  pdb_open_closed_classifier_template_aware.py  pymol_render_occlusion_surface.py  remove_duplicates.py
scripts/a_frag_lib/: a_queue_raw.sh  b_cat_raw.sh  c_pdb_2_cluster_csv.sh  d_cluster_csv_2_cluster_bin.sh  e_pca_reduce.sh  f_cluster_shwap.sh  frag_lib_pdb_resampler.py  g_resample_ids.sh  h_resample_pdbs.sh  i_build_lib_dir.sh
scripts/analysis/: atom_distance_analysis.R  cluster_analysis.R  electrostat_analysis.R  electrostat_globals.R  electrostat_globals2.R  electrostat_merge_utilities.R  electrostat_regional.R  extract_exemplars.py  extract_samples.py  load_data_utils.R  occlusion_analysis.py  open_prop_analysis2.R  pKa_analysis.R  primary_sequence_utilities.R  pymol_load_exemplars.py  rmsd_analysis.R  sasa_analysis.R  theme_Publication.R
scripts/b_multi_loop/: a_gen_pdbs.sh  b_calc_pka.sh  c_clean_propka.sh  d_gen_NAMD_topo.sh
scripts/c_cluster/: A_partial_pipe.sh  a_pdb_dirs_2_cluster_csv.sh  b_cluster_csv_2_cluster_bin.sh  c_pca_reduce.sh  d_cluster_shwap.sh  e_resample_ids.sh  f_resample_pdbs.sh  g_calc_pka.note.txt  h_gen_NAMD_topo.sh  i_psf_clean.sh  j_extract_pca_for_plots.sh
scripts/d_relax/: A_full_pipe.sh  a_NAMD_minimize.sh  b_NAMD_capture.sh  c_1_cat_NAMD_energy.sh  c_2_munge_NAMD_interactions.sh  d_1_coor_to_castp_pdb.sh  d_2_opt_filter_top_k_castp_pdb.sh  e_call_castp.sh  f_open_closed_classify.sh
source/: atom.cpp  atom.h  cluster_exporter.cpp  collision_frontend.cpp  collision_grid.h  collision_grid_prot.cpp  collision_grid_prot.h  collision_logger.h  energy_stats.h  frag_lib_manager.h  main.cpp  matrix.cpp  matrix.h  misc_structs.h  mutation_manager.cpp  mutation_manager.h  params.cpp  point.h  potential.cpp  potential_frontend_loodis.h  reprst.cpp  reprst.h  residue.cpp  rotamer.cpp  rotamer.h  smc.h  structure.cpp  util.h
source/config/: ConfigFile.cpp
tools/namd/scripts/: patch_topology.tcl
tools/namd/source/: Make.charm  Make.depends  Makefile  config  full_build.sh
tools/namd/source/arch/: BlueGeneQ-xlC.arch  CRAY-XC-intel.arch  CRAY-XC.cuda  CRAY-XE-gnu.arch  Linux-ARM-g++.arch  Linux-ARM.cuda  Linux-ARM64-g++.arch  Linux-ARM64.cuda  Linux-POWER-g++.arch  Linux-POWER.cuda  Linux-x86_64-icc.arch  MacOSX-x86_64-clang.arch  MacOSX-x86_64.cuda  Win32-MSVC.arch  Win64-MSVC.arch  Win64.cuda
tools/namd/source/src/: BOCgroup.h  BackEnd.C  Broadcasts.h  ComputeAngles.C  ComputeAngles.h  ComputeBonds.C  ComputeBonds.h  ComputeDihedrals.C  ComputeDihedrals.h  ComputeGBIS.C  ComputeGridForce.C  ComputeImpropers.C  ComputeImpropers.h  (+71 more)
tools/propka-3.1/: README.md
vstudio/: mDisgro.sln  mDisgro.vcxproj  mDisgro.vcxproj.filters  pretzel.sln  pretzel.vcxproj  pretzel.vcxproj.filters
(+20 files in other folders)
